fixed overflow scroll

--- a/src/app.scss
+++ b/src/app.scss
@@ -25,7 +25,10 @@
 
 section {
   position: relative;
-  height: 1000px;
+  height: 110vh;
+  width: 120%;
+  left: -10%;
+  //transform: rotate(-5deg);
   background-color: red;
 }
 
@@ -35,7 +38,7 @@ section {
   background-color: rgb(89, 203, 255);
   position: absolute;
   border-radius: 50%;
-  // mix-blend-mode: overlay;
+  mix-blend-mode: screen;
   opacity: 0;
   z-index: 9999;
 }
@@ -57,10 +60,24 @@ section {
   align-items: center;
   justify-content: center;
   width: 100%;
-  mix-blend-mode: overlay;
+  mix-blend-mode: screen;
   height: 100vh;
   font-family: "Playfair Display";
-  //font-size: 36px;
+  font-size: 36px;
+  background-color: white;
+}
+
+.image-block {
+  position: relative;
+  width: 100vw;
+  height: auto;
+  opacity: 1;
+  //left: 0;
+  //top: 0;
+  //animation: 1s slideUpBg;
+  //animation-delay: 1.5s;
+  //animation-fill-mode: forwards;
+  //z-index: -999;
 }
 
 .blue-block {
@@ -98,19 +115,6 @@ section {
   animation-fill-mode: forwards;
   bottom: 0;
   left: 0;
-  z-index: -999;
-}
-
-.image-block {
-  position: absolute;
-  width: 100vw;
-  height: auto;
-  opacity: 0;
-  left: 0;
-  top: 0;
-  animation: 1s slideUpBg;
-  animation-delay: 1.5s;
-  animation-fill-mode: forwards;
   z-index: -999;
 }
 
